Fix overflows behind screen and other annoyances

--- a/src/styles/_skilltree.scss
+++ b/src/styles/_skilltree.scss
@@ -1,3 +1,5 @@
+@import 'scrollbar';
+
 @property --a {
   syntax: '<angle>';
   inherits: false;
@@ -23,6 +25,16 @@
   border-radius: 10px;
   border: 1px solid var(--border-color);
   width: min(calc(var(--length) * 19px) + 200px + 90px + 35px, 100%);
+}
+
+.skilltree-container {
+  @include scrollbar;
+  --negate-margin-block: calc(2 - 2 * var(--vertical));
+  position: relative;
+  overflow-y: hidden;
+  padding-right: 5px;
+  width: min(calc(var(--length) * 19px) + 200px + 90px + 35px, 100%);
+  height: max(50px, calc(30px + 140px * var(--height) - 20px));
 }
 
 .skill-node {
@@ -140,7 +152,7 @@
   &::after {
     position: absolute;
     content: '';
-    height: calc((var(--height) - var(--offset-top) - var(--offset-bottom)) * 140px);
+    height: calc((var(--height) - var(--offset-top) - var(--offset-bottom)) * 140px + 1px);
     width: 1px;
     top: calc((var(--height) - 1) * 70px * -1);
     top: calc((var(--height) / 2 - var(--offset-top)) * 140px * -1) ;
@@ -166,11 +178,12 @@
 }
 
 .skills {
+  position: absolute;
   display: grid;
   justify-content: start;
   align-items: center;
   height: max(50px, calc(30px + 140px * var(--height) - 20px));
-  width: calc(var(--width) * 250px);
+  width: calc(var(--width) * 240px);
   // width: min(calc(var(--length) * 19px) + 200px + 90px + 35px, 100%);
 }
 
